adding ADMIN and correcting connection string mongoDB

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://yahavmor77_db_user:naan1930@yahavmor.8urmsdo.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://yahavmor77_db_user:naan1930@yahavmor.8urmsdo.mongodb.net/?appName=yahavMor
 DB_NAME=toysDB
