--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "start": "nodemon server.js",
-        "server:dev": "nodemon server.js",
-        "server:prod": "set NODE_ENV=production&&node server.js",
-        "server:prod:mac": "export NODE_ENV=production & node server.js"
+        "dev": "cross-env NODE_ENV=development nodemon server.js",
+        "start": "cross-env NODE_ENV=production node server.js"
     },
     "author": "Me",
     "license": "ISC",
@@ -20,6 +18,7 @@
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
+        "cross-env": "^10.1.0",
         "cryptr": "^6.3.0",
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
