--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cryptr": "^6.3.0",
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
+        "express-session": "^1.18.2",
         "mongodb": "^6.21.0"
     },
     "repository": {
