refactor authentication flow to implement session management and remove token handling

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "connect-mongo": "^6.0.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "cross-env": "^10.1.0",
